--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
 							<header class="major">
-								<h2>Lorem ipsum dolor adipiscing<br />
-								amet dolor consequat</h2>
+								<h2>About Me<br />
+								</h2>
 							</header>
-							<p>Adipiscing a commodo ante nunc accumsan et interdum mi ante adipiscing. A nunc lobortis non nisl amet vis sed volutpat aclacus nascetur ac non. Lorem curae et ante amet sapien sed tempus adipiscing id accumsan.</p>
+							<p>Experienced IT professional with more than 4+ years of hands-on software development experience with expertise in Database administration, SQL Scripting and Website designing to develop robust and highly efficient web solutions leading IT transformation initiatives across multiple platforms and technologies and 5+ years of experience training IT professionals including preparation of training modules, organizing training activities and oversight </p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
 							<span class="image fit"><img src="0.jpg" alt="" /></span>
