--- a/index.html
+++ b/index.html
@@ -62,12 +62,19 @@
 						</div>
 						<div class="col-6 col-12-medium">
 							<header class="major">
-								<h2>Lorem ipsum dolor adipiscing<br />
-								amet dolor consequat</h2>
+								<h2>Skills<br />
+								</h2>
 							</header>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
-							<p>Blandit faucibus proin. Ac aliquam integer adipiscing enim non praesent vis commodo nunc phasellus cubilia ac risus accumsan. Accumsan blandit. Lobortis phasellus non lobortis dit varius mi varius accumsan lobortis. Blandit ante aliquam lacinia lorem lobortis semper morbi col faucibus vitae integer placerat accumsan orci eu mi odio tempus adipiscing adipiscing adipiscing curae consequat feugiat etiam dolore.</p>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
+							<p><h4>Technologies</h4> 
+              .NET , MVC, EntityFramework, HTML5, React ,Javascript, CSS, Bootstrap, GIT, AGILE</p>
+							<p><h4>Languages</h4></p>
+							<p>VB.Net, C#.Net, Javascript, NodeJs, TSQL, PL/SQL, ExpressJs, Ruby</p>
+              <p><h4>Database</h4></p>
+							<p>SQL Server, MySQL, Oracle, Ms Access, PostgreSQL, MongoDB</p>
+              <p><h4>Testing</h4></p>
+							<p>Mocha, Chai, JEST, Cypress</p>
+              <p><h4>Operating Systems</h4></p>
+							<p>Windows(7,8,10), Ubuntu, CentOS </p>
 						</div>
 					</div>
 				</div>
