--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
 								</h2>
 							</header>
 							<p>Experienced IT professional with more than 4+ years of hands-on software development experience with expertise in Database administration, SQL Scripting and Website designing to develop robust and highly efficient web solutions leading IT transformation initiatives across multiple platforms and technologies and 5+ years of experience training IT professionals including preparation of training modules, organizing training activities and oversight </p>
+              <ul class="actions special">
+                <li><a href="https://resume.creddle.io/resume/b3rqp08p6o0" class="button scrolly" target=”_blank”>Resume</a></li>
+                <li><a href="https://github.com/shivani1406" class="button scrolly"
+                  target=”_blank”>GitHub</a></li>
+                <li><a href="https://www.linkedin.com/in/shivani-s-1406/" class="button scrolly" target=”_blank”>LinkedIn</a></li>
+              </ul>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
 							<span class="image fit"><img src="0.jpg" alt="" /></span>
