--- a/index.html
+++ b/index.html
@@ -108,15 +108,17 @@
 							<h3>Interview Scheduler</h3>
 							<p>SPA where user can schedule a interview ,contingent to avaliablity of the slots, application uses ReactJs and websockets to update slots in real-time for multiple users</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="https://github.com/shivani1406/scheduler" class="button"
+									target="_blank">More</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<span class="image fit"><img src="Tweeter.gif" alt="" /></span>
+							<h3>Tweeter</h3>
+							<p>Replica of Twitter App, SPA user can tweet upto 140 words, Technology used ExpressJS , Javascript </p>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="https://github.com/shivani1406/tweeter" class="button"
+									target="_blank">More</a></li>
 							</ul>
 						</div>
             <div class="col-4 col-12-medium">
