added project gif

--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@
 							</ul>
 						</div>
             <div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<span class="image fit"><img src="quiz-app.gif" alt="" /></span>
+							<h3>Quiz-App</h3>
+							<p>Team project, this react app helps in creating a quiz and attempting the quiz, and sharing the quiz and results with friends</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="https://github.com/shivani1406/Quiz-App" class="button">More</a></li>
 							</ul>
 						</div>
             <div class="col-4 col-12-medium">
