--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
 					</header>
 					<p></p>
 					<ul class="actions special">
-						<li><h3><a href ="tel: 14169855484">1-416-985-5484</a></h3></li>
+						<li><h3><a href ="tel: 14169855484" class="button">1-416-985-5484</a></h3></li>
 						<li><h3><a href = "mailto: shivani1406sharma@gmail.com"
-							target="_blank">shivani1406sharma@gmail.com</a></h3></li>
+							target="_blank" class="button">shivani1406sharma@gmail.com</a></h3></li>
 					</ul>
 				</div>
 			</section>
@@ -172,14 +172,14 @@
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="https://twitter.com/Shivani_1406" class="icon brands alt fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
+					<li><a href="https://www.facebook.com/shivani.sharma.942/" class="icon brands alt fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li>
+					<li><a href="https://www.instagram.com/shivanisharmaarora/" class="icon brands alt fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+					<!-- <li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li> -->
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; Shivani Sharma</li><li></li>
 				</ul>
 			</section>
 
