added new chat app project

--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
 							</ul>
 						</div>
             <div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<span class="image fit"><img src="ChatApp.gif" alt="" /></span>
+							<h3>Chat Application</h3>
+							<p>Create real-time ChatApp, using ReactJs, ChatEngine.io </p>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="https://vermillion-rugelach-8d99b1.netlify.app/" class="button">More</a></li>
 							</ul>
 						</div>
             <div class="col-4 col-12-medium">
