added new chat app project

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 							<h3>Chat Application</h3>
 							<p>Create real-time ChatApp, using ReactJs, ChatEngine.io </p>
 							<ul class="actions special">
-								<li><a href="https://vermillion-rugelach-8d99b1.netlify.app/" class="button">More</a></li>
+								<li><a href="https://vermillion-rugelach-8d99b1.netlify.app/" class="button" target="_blank">More</a></li>
 							</ul>
 						</div>
             <div class="col-4 col-12-medium">
