added C# project details

--- a/index.html
+++ b/index.html
@@ -140,10 +140,12 @@
 						</div>
             <div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<h3>G1 Knowledge Test</h3>
+							<p>This application helps to create objective test, also the study material.
+								Application is build using C#, ASP.NET Core, Azure
+							</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="https://github.com/shivani1406/G1KnowledgeTest" class="button" target="_blank">More</a></li>
 							</ul>
 						</div>
 					</div>
