added C# project details

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 							</ul>
 						</div>
             <div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							<span class="image fit"><img src="G1.jpg" alt="" /></span>
 							<h3>G1 Knowledge Test</h3>
 							<p>This application helps to create objective test, also the study material.
 								Application is build using C#, ASP.NET Core, Azure
