--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="petbnb.png" alt="" /></span>
 							<h3>PetBnB</h3>
-							<p>The website helps Guests, book property for their pets, the project was made using React as FrontEnd and Express as BackEnd</p>
+							<p>Team project, the website helps Guests, book property for their pets, the project was made using React as FrontEnd and Express as BackEnd</p>
 							<ul class="actions special">
 								<li><a href="https://github.com/shivani1406/petbnb" class="button"
                   target="_blank">More</a></li>
