--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 					<!-- <p>Ante nunc accumsan et aclacus nascetur ac ante amet sapien sed.</p> -->
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="petbnb.png" alt="" /></span>
+							<span class="image fit"><img src="PetBnb.gif" alt="" /></span>
 							<h3>PetBnB</h3>
 							<p>Team project, the website helps Guests, book property for their pets, the project was made using React as FrontEnd and Express as BackEnd</p>
 							<ul class="actions special">
