--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<div class="inner">
 					<span class="icon solid major fa-cloud"></span>
 					<h1>Hi, I'm <strong>Shivani Sharma</strong><br />
-            Full Stack Web Developer | Database Designer</h1>
+            Cyber Security Analyst | Software Developer</h1>
 					<p>Thank you for visiting my Portfolio Page<br />
 					</p>
 					<ul class="actions special">
@@ -37,9 +37,9 @@
 								<h2>About Me<br />
 								</h2>
 							</header>
-							<p>Experienced IT professional with more than 4+ years of hands-on software development experience with expertise in Database administration, SQL Scripting and Website designing to develop robust and highly efficient web solutions leading IT transformation initiatives across multiple platforms and technologies and 5+ years of experience training IT professionals including preparation of training modules, organizing training activities and oversight </p>
+							<p>Results-driven software developer and cybersecurity professional with experience in ASP.NET, SQL Server, Node.js, React, and MySQL. Recently completed a diploma in cybersecurity and earned CompTIA Security+ and ISC2 CC certifications, demonstrating a strong foundation in security principles. Passionate about building secure, scalable applications and implementing cybersecurity best practices to protect systems from emerging threats. </p>
               <ul class="actions special">
-                <li><a href="https://resume.creddle.io/resume/b3rqp08p6o0" class="button scrolly" target=”_blank”>Resume</a></li>
+                <li><a href="https://drive.google.com/file/d/1lvyVCiOoAYWytfiwZdE2LPUvu1U5wNuI/view?usp=sharing”>Resume</a></li>
                 <li><a href="https://github.com/shivani1406" class="button scrolly"
                   target=”_blank”>GitHub</a></li>
                 <li><a href="https://www.linkedin.com/in/shivani-s-1406/" class="button scrolly" target=”_blank”>LinkedIn</a></li>
