--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
 							</header>
 							<p>Results-driven software developer and cybersecurity professional with experience in ASP.NET, SQL Server, Node.js, React, and MySQL. Recently completed a diploma in cybersecurity and earned CompTIA Security+ and ISC2 CC certifications, demonstrating a strong foundation in security principles. Passionate about building secure, scalable applications and implementing cybersecurity best practices to protect systems from emerging threats. </p>
               <ul class="actions special">
-                <li><a href="https://drive.google.com/file/d/1lvyVCiOoAYWytfiwZdE2LPUvu1U5wNuI/view?usp=sharing” class="button scrolly"
-                  target=”_blank”>Resume</a></li>
+                <li><a href="https://drive.google.com/file/d/1lvyVCiOoAYWytfiwZdE2LPUvu1U5wNuI/view?usp=sharing" class="button scrolly" target=”_blank”>Resume</a></li>
                 <li><a href="https://github.com/shivani1406" class="button scrolly"
                   target=”_blank”>GitHub</a></li>
                 <li><a href="https://www.linkedin.com/in/shivani-s-1406/" class="button scrolly" target=”_blank”>LinkedIn</a></li>
